# spine-measure-assist

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  RESEARCH.md  pyproject.toml
CervicalMeasureAssist/: CervicalMeasureAssist.py
CervicalMeasureAssist/lib/: cervical_assist_controller.py  cervical_logic_inference.py  cervical_measurement_sets.py  ui_auto.py  ui_measure.py
LumbarMeasureAssist/: CMakeLists.txt  LumbarMeasureAssist.py
LumbarMeasureAssist/lib/: assist_controller.py  logic_inference.py
SagittalMeasureAssist/: SagittalMeasureAssist.py
SagittalMeasureAssist/lib/: assist_controller.py  logic_angles.py  logic_export.py  logic_inference.py  measurement_sets.py  ui_auto.py  ui_export.py  ui_measure.py
WholeSpineAnnotation/: CMakeLists.txt  WholeSpineAnnotation.py
WholeSpineAnnotation/lib/: annotation_controller.py  dataset_io.py  ui_annotate.py
WholeSpineAssist/: WholeSpineAssist.py
WholeSpineAssist/lib/: ui_dataset.py  ui_save.py
scripts/: export_angles_csv.py  extract_cervical_dataset.py  extract_dataset.py  extract_dicom_dir.py  inspect_dicom.py  inter_annotator_error.py  merge_cervical_csv.py
slicer/: CMakeLists.txt
slicer/CervicalMeasureAssist/: CMakeLists.txt  CervicalMeasureAssist.py
slicer/CervicalMeasureAssist/lib/: __init__.py  cervical_assist_controller.py  cervical_logic_export.py  cervical_measurement_sets.py  logic_angles_cervical.py
slicer/LumbarMeasureAssist/lib/: assist_controller.py  logic_angles.py  logic_export.py  measurement_sets.py  ui_measure.py
slicer/WholeSpineAssist/: CMakeLists.txt  WholeSpineAssist.py
slicer/WholeSpineAssist/lib/: annotation_controller.py  dataset_io.py
slicer/shared/: ui_source_tab.py
tests/: conftest.py  test_dataset_cervical.py  test_dataset_padding.py  test_dataset_phase2.py  test_dataset_utils.py  test_infer_statistics.py  test_infer_statistics_cervical.py  test_landmark_scheme.py  test_logic_angles.py  test_logic_angles_cervical.py  test_logic_export.py  test_logic_inference_utils.py  test_measurement_sets.py  test_measurement_sets_cervical.py  test_model_components.py
train/: dataset.py  dataset_cervical.py  dataset_phase2.py  eval_lumbar.py  export_lumbar.py  export_onnx.py  export_onnx_phase2.py  finetune_colab.ipynb  infer_onnx.py  infer_onnx_cervical.py  infer_phase2.py  landmark_scheme.py  model.py  model_hrnet.py  train.ipynb  train.py  train_colab.ipynb
train/colab/: train_cervical.ipynb  train_detector.ipynb  train_phase2.ipynb
train/learning_curve/: README.md  (+3 more)
(+64 files in other folders)
