[project]
name = "anglist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pydicom>=2.4.0",
]

# Training dependencies (CPU想定。GPU版が必要なら環境に合わせて調整してください)
[project.optional-dependencies]
ml = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "onnxruntime>=1.18.0",
    "albumentations>=1.4.0",
    "segmentation-models-pytorch>=0.3.4",
]
